[gd_scene load_steps=60 format=2]

[ext_resource path="res://game/GameView.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/Game.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/home_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/sounds/music/nitro_music.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/sfx/_pa/burst/burst.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/key_2.wav" type="AudioStream" id=6]
[ext_resource path="res://game/gui/PauseGame.tscn" type="PackedScene" id=7]
[ext_resource path="res://game/gui/hud/Hud.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/key_3.wav" type="AudioStream" id=9]
[ext_resource path="res://game/gui/DriverHuds.gd" type="Script" id=10]
[ext_resource path="res://assets/sounds/music/moose.mp3" type="AudioStream" id=11]
[ext_resource path="res://game/gui/DriverHud.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/sounds/sfx/misile_flight.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/music/Ludum Dare 28 - Track 1_loop.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sounds/sfx/race_start_beep___f1-starting-lights-sound-download_audio_best.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sounds/sfx/misile_shoot.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/sounds/sfx/misile_hit.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/sounds/sfx/detect_ping___383147__jomellejager__alarm.wav" type="AudioStream" id=19]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/screen_slide.wav" type="AudioStream" id=20]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/menu_fade.wav" type="AudioStream" id=21]
[ext_resource path="res://game/SoundManagerGame.gd" type="Script" id=22]
[ext_resource path="res://assets/sounds/sfx/bullet_shoot___658823__3dj__battlefield-7.wav" type="AudioStream" id=23]
[ext_resource path="res://assets/sounds/sfx/shocker_efekt___PA_skilled_frcer.wav" type="AudioStream" id=24]
[ext_resource path="res://assets/sounds/sfx/weapon_reload___432141__maximbomba__rifle-or-shotgun-reload.wav" type="AudioStream" id=25]
[ext_resource path="res://game/GameTracker.gd" type="Script" id=26]
[ext_resource path="res://assets/sounds/sfx/pickup___39026__wildweasel__keypickup.wav" type="AudioStream" id=27]
[ext_resource path="res://assets/sounds/sfx/nitro_short___491407__samsterbirdies__jet-engine-startup.wav" type="AudioStream" id=28]
[ext_resource path="res://assets/sounds/sfx/_pa/events/win_jingle_270528__littlerobotsoundfactory__jingle_win_00.wav" type="AudioStream" id=29]
[ext_resource path="res://game/GameReactor.gd" type="Script" id=30]
[ext_resource path="res://assets/sounds/sfx/hit_stray_v2.wav" type="AudioStream" id=31]
[ext_resource path="res://assets/sounds/sfx/hit_wall.wav" type="AudioStream" id=32]
[ext_resource path="res://assets/sounds/sfx/hit_explosion2___677934__logicogonist__explosion-4.wav" type="AudioStream" id=33]
[ext_resource path="res://assets/sounds/sfx/finish_horn_217138__lonemonk__1964-chrysler-horn-honk-short.wav" type="AudioStream" id=34]
[ext_resource path="res://assets/sounds/sfx/_pa/burst/burst_cocking_short.wav" type="AudioStream" id=35]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/btn_confirm_NFF-home-switch-on.wav" type="AudioStream" id=36]
[ext_resource path="res://assets/sounds/sfx/_pa/skills/teleport_loop_v2.wav" type="AudioStream" id=37]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/btn_focus_change.wav" type="AudioStream" id=38]
[ext_resource path="res://assets/sounds/sfx/_pa/burst/burst_uncocking.wav" type="AudioStream" id=39]
[ext_resource path="res://assets/sounds/sfx/_pa/skills/teleport_in_v2.wav" type="AudioStream" id=40]
[ext_resource path="res://assets/sounds/sfx/_pa/skills/skill_cling.wav" type="AudioStream" id=41]
[ext_resource path="res://assets/sounds/sfx/_pa/skills/teleport_out_v2.wav" type="AudioStream" id=42]
[ext_resource path="res://assets/theme/fonts/black_slanted_L.tres" type="DynamicFont" id=43]
[ext_resource path="res://game/gui/ScoreTable.tscn" type="PackedScene" id=44]
[ext_resource path="res://game/gui/GameOver.gd" type="Script" id=45]
[ext_resource path="res://assets/sounds/sfx/_pa/events/countdown-a.ogg" type="AudioStream" id=46]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/key_5.wav" type="AudioStream" id=47]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/btn_cancel_NFF-home-switch-off.wav" type="AudioStream" id=48]
[ext_resource path="res://game/Gui.gd" type="Script" id=50]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/tutorial_stage_a_NFF-glocken-bad.wav" type="AudioStream" id=53]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/key_1.wav" type="AudioStream" id=60]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/key_4.wav" type="AudioStream" id=61]
[ext_resource path="res://assets/sounds/sfx/_pa/events/loose_jingle_GAMEOVER.wav" type="AudioStream" id=65]
[ext_resource path="res://assets/sounds/music/Patreon Goal Reward Loops - Track 08_loop.wav" type="AudioStream" id=66]
[ext_resource path="res://assets/sounds/music/457363__3m4__trap-beat-2.mp3" type="AudioStream" id=68]

[sub_resource type="StyleBoxFlat" id=18]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id=19]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0.964706, 0.878431, 1 )

[sub_resource type="AudioStreamRandomPitch" id=13]
audio_stream = ExtResource( 32 )

[sub_resource type="AudioStreamRandomPitch" id=15]
audio_stream = ExtResource( 31 )

[sub_resource type="AudioStreamRandomPitch" id=17]
audio_stream = ExtResource( 5 )
random_pitch = 1.05

[node name="Game" type="Node2D"]
script = ExtResource( 2 )
main_signal_connecting_paths = [ NodePath("Gui") ]

[node name="Reactor" type="Node" parent="."]
script = ExtResource( 30 )

[node name="Tracker" type="Node" parent="."]
script = ExtResource( 26 )

[node name="GameViewFlow" type="VFlowContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2560.0
margin_bottom = 1440.0
rect_min_size = Vector2( 2560, 1440 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/vseparation = 10
custom_constants/hseparation = 10

[node name="GameView" parent="GameViewFlow" instance=ExtResource( 1 )]
size_flags_vertical = 1

[node name="GameView2" parent="GameViewFlow" instance=ExtResource( 1 )]
margin_left = 2570.0
margin_right = 5130.0

[node name="GameView3" parent="GameViewFlow" instance=ExtResource( 1 )]
margin_left = 5140.0
margin_right = 7700.0
size_flags_vertical = 0

[node name="__test_flow" type="HFlowContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2560.0
margin_bottom = 1444.0
rect_min_size = Vector2( 2560, 1440 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Panel" type="Panel" parent="__test_flow"]
margin_right = 888.0
margin_bottom = 1000.0
rect_min_size = Vector2( 500, 1000 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 18 )

[node name="Panel2" type="Panel" parent="__test_flow"]
margin_left = 892.0
margin_right = 2560.0
margin_bottom = 1000.0
rect_min_size = Vector2( 1280, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 18 )

[node name="Panel3" type="Panel" parent="__test_flow"]
margin_top = 1004.0
margin_right = 2560.0
margin_bottom = 1724.0
rect_min_size = Vector2( 1280, 720 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 18 )

[node name="Panel4" type="Panel" parent="__test_flow"]
visible = false
margin_top = 2422.0
margin_right = 2560.0
margin_bottom = 3142.0
rect_min_size = Vector2( 1280, 720 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 18 )

[node name="Gui" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 50 )

[node name="DriverHuds" type="Control" parent="Gui"]
margin_right = 2560.0
margin_bottom = 1440.0
script = ExtResource( 10 )

[node name="ViewImitator" type="Control" parent="Gui/DriverHuds"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true

[node name="Edge" type="Panel" parent="Gui/DriverHuds/ViewImitator"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 19 )

[node name="DriverHud" parent="Gui/DriverHuds/ViewImitator" instance=ExtResource( 12 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -105.0
margin_bottom = 105.0

[node name="Hud" parent="Gui" instance=ExtResource( 8 )]
__meta__ = {
"_edit_horizontal_guides_": [ 360.0 ],
"_edit_vertical_guides_": [ 640.0, 0.0 ]
}

[node name="GameCover" type="ColorRect" parent="Gui"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="PauseGame" parent="Gui" instance=ExtResource( 7 )]
visible = false

[node name="GameOver" type="Control" parent="Gui"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 45 )
__meta__ = {
"_edit_vertical_guides_": [ 320.0, 1280.0 ]
}

[node name="Background" type="ColorRect" parent="Gui/GameOver"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )

[node name="Panel" type="Panel" parent="Gui/GameOver"]
visible = false
modulate = Color( 1, 1, 1, 0.941176 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="Gui/GameOver"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -760.0
margin_top = 208.0
margin_right = 760.0
margin_bottom = 426.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 43 )
text = "GAME OVER"
align = 1

[node name="Level" type="Control" parent="Gui/GameOver"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Game" type="Control" parent="Gui/GameOver"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ScoreTable" parent="Gui/GameOver" instance=ExtResource( 44 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -488.0
margin_top = 576.0
margin_right = 490.0
margin_bottom = 880.0

[node name="Menu" type="HBoxContainer" parent="Gui/GameOver"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -206.0
margin_top = -268.0
margin_right = 209.0
margin_bottom = -210.0
grow_horizontal = 2
size_flags_horizontal = 4
custom_constants/separation = 64
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="QuitGameBtn" type="Button" parent="Gui/GameOver/Menu"]
visible = false
margin_right = 290.0
margin_bottom = 58.0
focus_neighbour_left = NodePath("../RestartBtn")
mouse_default_cursor_shape = 2
size_flags_vertical = 8
text = "QUIT GAME"

[node name="QuitBtn" type="Button" parent="Gui/GameOver/Menu"]
margin_right = 127.0
margin_bottom = 58.0
mouse_default_cursor_shape = 2
size_flags_vertical = 8
text = "QUIT"

[node name="RestartBtn" type="Button" parent="Gui/GameOver/Menu"]
margin_left = 191.0
margin_right = 415.0
margin_bottom = 58.0
focus_neighbour_right = NodePath("../QuitGameBtn")
mouse_default_cursor_shape = 2
size_flags_vertical = 8
text = "RESTART"

[node name="SoundManager" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 22 )

[node name="GameMusic" type="Node2D" parent="SoundManager"]

[node name="Track8_5" type="AudioStreamPlayer" parent="SoundManager/GameMusic"]
stream = ExtResource( 11 )
volume_db = -10.0
bus = "GameMusic"

[node name="Track4_4" type="AudioStreamPlayer" parent="SoundManager/GameMusic"]
stream = ExtResource( 66 )
volume_db = -6.0
bus = "GameMusic"

[node name="Track12_5" type="AudioStreamPlayer" parent="SoundManager/GameMusic"]
stream = ExtResource( 68 )
volume_db = -6.0
bus = "GameMusic"

[node name="Track1_3" type="AudioStreamPlayer" parent="SoundManager/GameMusic"]
stream = ExtResource( 15 )
volume_db = -7.0
bus = "GameMusic"

[node name="Nitro" type="AudioStreamPlayer" parent="SoundManager/GameMusic"]
stream = ExtResource( 4 )
bus = "GameMusic"

[node name="GuiSfx" type="Node2D" parent="SoundManager"]

[node name="Inputs" type="Node2D" parent="SoundManager/GuiSfx"]

[node name="Typing" type="Node2D" parent="SoundManager/GuiSfx/Inputs"]

[node name="Key1" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Inputs/Typing"]
stream = ExtResource( 60 )
volume_db = -15.0
pitch_scale = 0.6

[node name="Key2" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Inputs/Typing"]
stream = ExtResource( 6 )
volume_db = -15.0
pitch_scale = 0.6

[node name="Key3" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Inputs/Typing"]
stream = ExtResource( 9 )
volume_db = -15.0
pitch_scale = 0.6

[node name="Key4" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Inputs/Typing"]
stream = ExtResource( 61 )
volume_db = -15.0
pitch_scale = 0.6

[node name="Key5" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Inputs/Typing"]
stream = ExtResource( 47 )
volume_db = -15.0
pitch_scale = 0.6

[node name="BtnFocus" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Inputs"]
stream = ExtResource( 38 )
volume_db = -30.0
pitch_scale = 0.7

[node name="BtnConfirm" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Inputs"]
stream = ExtResource( 36 )
volume_db = -25.0

[node name="BtnCancel" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Inputs"]
stream = ExtResource( 48 )
volume_db = -25.0

[node name="Events" type="Node2D" parent="SoundManager/GuiSfx"]

[node name="Win" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Events"]
stream = ExtResource( 29 )
volume_db = -15.0

[node name="Loose" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Events"]
stream = ExtResource( 65 )
volume_db = -5.0

[node name="GameCoundownA" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Events"]
stream = ExtResource( 46 )
volume_db = -25.0
pitch_scale = 0.8

[node name="GameCoundownB" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Events"]
stream = ExtResource( 16 )
volume_db = -15.0
pitch_scale = 0.7

[node name="StartCoundownA" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Events"]
stream = ExtResource( 46 )
volume_db = -25.0

[node name="StartCoundownB" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Events"]
stream = ExtResource( 16 )
volume_db = -15.0

[node name="TutorialStageDone" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Events"]
stream = ExtResource( 53 )
volume_db = -13.0
pitch_scale = 1.1

[node name="MenuFade" type="AudioStreamPlayer" parent="SoundManager/GuiSfx"]
stream = ExtResource( 21 )
volume_db = -15.0
pitch_scale = 0.93

[node name="ScreenSlide" type="AudioStreamPlayer" parent="SoundManager/GuiSfx"]
stream = ExtResource( 20 )
pitch_scale = 0.9

[node name="Sfx" type="Node" parent="SoundManager"]

[node name="BigHorn" type="AudioStreamPlayer" parent="SoundManager/Sfx"]
stream = ExtResource( 34 )
volume_db = 5.0
pitch_scale = 0.8
bus = "GameSfx"

[node name="LittleHorn" type="AudioStreamPlayer" parent="SoundManager/Sfx"]
stream = ExtResource( 34 )
bus = "GameSfx"

[node name="BulletHit" type="AudioStreamPlayer" parent="SoundManager/Sfx"]
stream = SubResource( 13 )
volume_db = -15.0
pitch_scale = 0.7
bus = "GameSfx"

[node name="BoltExplode" type="AudioStreamPlayer" parent="SoundManager/Sfx"]
stream = ExtResource( 33 )
volume_db = -10.0
bus = "GameSfx"

[node name="ShockerEffect" type="AudioStreamPlayer" parent="SoundManager/Sfx"]
stream = ExtResource( 24 )
volume_db = -16.0
bus = "GameSfx"

[node name="Pickable" type="AudioStreamPlayer" parent="SoundManager/Sfx"]
stream = ExtResource( 27 )
volume_db = -15.0
bus = "GameSfx"

[node name="PickableAmmo" type="AudioStreamPlayer" parent="SoundManager/Sfx"]
stream = ExtResource( 25 )
volume_db = -15.0
pitch_scale = 1.2
bus = "GameSfx"

[node name="PickableNitro" type="AudioStreamPlayer" parent="SoundManager/Sfx"]
stream = ExtResource( 28 )
volume_db = -10.0
bus = "GameSfx"

[node name="LevelSounds" type="Node" parent="SoundManager"]

[node name="HitBullet" type="AudioStreamPlayer" parent="SoundManager/LevelSounds"]
stream = SubResource( 15 )
volume_db = -10.0
pitch_scale = 0.9
bus = "GameSfx"

[node name="HitBulletBrick" type="AudioStreamPlayer" parent="SoundManager/LevelSounds"]
stream = ExtResource( 41 )
volume_db = 11.513
bus = "GameSfx"

[node name="HitMisile" type="AudioStreamPlayer" parent="SoundManager/LevelSounds"]
stream = SubResource( 17 )
volume_db = -10.0
bus = "GameSfx"

[node name="Nitro" type="AudioStreamPlayer" parent="SoundManager/LevelSounds"]
stream = ExtResource( 35 )
volume_db = -15.0
bus = "GameSfx"

[node name="DeNitro" type="AudioStreamPlayer" parent="SoundManager/LevelSounds"]
stream = ExtResource( 39 )
volume_db = -15.0
bus = "GameSfx"

[node name="MagnetIn" type="AudioStreamPlayer" parent="SoundManager/LevelSounds"]
stream = ExtResource( 40 )
volume_db = -10.0
bus = "GameSfx"

[node name="MagnetLoop" type="AudioStreamPlayer" parent="SoundManager/LevelSounds"]
stream = ExtResource( 37 )
volume_db = -10.0
bus = "GameSfx"

[node name="MagnetOut" type="AudioStreamPlayer" parent="SoundManager/LevelSounds"]
stream = ExtResource( 42 )
volume_db = -10.0
bus = "GameSfx"

[node name="Music" type="Node" parent="SoundManager"]

[node name="_ni vec tuki" type="Node2D" parent="SoundManager"]

[node name="MisileShoot" type="AudioStreamPlayer" parent="SoundManager/_ni vec tuki"]
stream = ExtResource( 17 )
bus = "GameSfx"

[node name="MisileFlight" type="AudioStreamPlayer" parent="SoundManager/_ni vec tuki"]
stream = ExtResource( 14 )
bus = "GameSfx"

[node name="MisileDetect" type="AudioStreamPlayer" parent="SoundManager/_ni vec tuki"]
stream = ExtResource( 19 )
bus = "GameSfx"

[node name="BulletShoot2" type="AudioStreamPlayer" parent="SoundManager/_ni vec tuki"]
stream = ExtResource( 23 )
bus = "GameSfx"

[node name="MisileExplode" type="AudioStreamPlayer" parent="SoundManager/_ni vec tuki"]
stream = ExtResource( 18 )
bus = "GameSfx"

[connection signal="pressed" from="Gui/GameOver/Menu/QuitGameBtn" to="Gui/GameOver" method="_on_QuitGameBtn_pressed"]
[connection signal="pressed" from="Gui/GameOver/Menu/QuitBtn" to="Gui/GameOver" method="_on_QuitBtn_pressed"]
